tests/snapshots/code_root_sampling__code_auto_sample_colorized_snapshot.snap
---
source: tests/code_root_sampling.rs
expression: sanitize_escapes(&out)
---
 1: \u{001b}[38;2;180;142;173mdef\u{001b}[38;2;192;197;206m \u{001b}[38;2;143;161;179mgreet\u{001b}[38;2;192;197;206m(\u{001b}[38;2;191;97;106mname\u{001b}[38;2;192;197;206m:\u{001b}[38;2;192;197;206m \u{001b}[38;2;192;197;206mstr\u{001b}[38;2;192;197;206m)\u{001b}[38;2;192;197;206m:
 5: \u{001b}[38;2;180;142;173mdef\u{001b}[38;2;192;197;206m \u{001b}[38;2;143;161;179mcompute\u{001b}[38;2;192;197;206m(\u{001b}[38;2;191;97;106mn\u{001b}[38;2;192;197;206m:\u{001b}[38;2;192;197;206m \u{001b}[38;2;192;197;206mint\u{001b}[38;2;192;197;206m)\u{001b}[38;2;192;197;206m \u{001b}[38;2;192;197;206m->\u{001b}[38;2;192;197;206m \u{001b}[38;2;192;197;206mint\u{001b}[38;2;192;197;206m:
15: \u{001b}[38;2;180;142;173mdef\u{001b}[38;2;192;197;206m \u{001b}[38;2;143;161;179mmain\u{001b}[38;2;192;197;206m(\u{001b}[38;2;192;197;206m)\u{001b}[38;2;192;197;206m:
23: \u{001b}[38;2;180;142;173mif\u{001b}[38;2;192;197;206m \u{001b}[38;2;192;197;206m__name__\u{001b}[38;2;192;197;206m \u{001b}[38;2;192;197;206m==\u{001b}[38;2;192;197;206m \u{001b}[38;2;192;197;206m"\u{001b}[38;2;163;190;140m__main__\u{001b}[38;2;192;197;206m"\u{001b}[38;2;192;197;206m:
