tests/snapshots/code_root_sampling__code_auto_sample_colorized_stripped_snapshot.snap
---
source: tests/code_root_sampling.rs
expression: stripped
---
 1: def greet(name: str):
 5: def compute(n: int) -> int:
15: def main():
23: if __name__ == "__main__":
