tests/snapshots/code_root_sampling__code_auto_sample_snapshot.snap
---
source: tests/code_root_sampling.rs
assertion_line: 28
expression: out
---
 1: def greet(name: str):
 5: def compute(n: int) -> int:
23: if __name__ == "__main__":
