tests/snapshots/code_root_sampling__code_huge_budget_snapshot.snap
---
source: tests/code_root_sampling.rs
expression: out
---
  1: # big sample file for snapshot testing
  3: def func_1():
  4:     print('line 1')
  6: def func_2():
  7:     print('line 2')
  9: def func_3():
 10:     print('line 3')
 12: def func_4():
 13:     print('line 4')
 14:     for j in range(3):
 15:         print(j)
 17: def func_5():
 18:     print('line 5')
 19:     if i % 2 == 0:
 20:         print('even branch')
 22: def func_6():
 23:     print('line 6')
 25: def func_7():
 26:     print('line 7')
 28: def func_8():
 29:     print('line 8')
 30:     for j in range(3):
 31:         print(j)
 33: def func_9():
 34:     print('line 9')
 36: def func_10():
 37:     print('line 10')
 38:     if i % 2 == 0:
 39:         print('even branch')
 41: def func_11():
 42:     print('line 11')
 44: def func_12():
 45:     print('line 12')
 46:     for j in range(3):
 47:         print(j)
 49: def func_13():
 50:     print('line 13')
 52: def func_14():
 53:     print('line 14')
 55: def func_15():
 56:     print('line 15')
 57:     if i % 2 == 0:
 58:         print('even branch')
 60: def func_16():
 61:     print('line 16')
 62:     for j in range(3):
 63:         print(j)
 65: def func_17():
 66:     print('line 17')
 68: def func_18():
 69:     print('line 18')
 71: def func_19():
 72:     print('line 19')
 74: def func_20():
 75:     print('line 20')
 76:     for j in range(3):
 77:         print(j)
 78:     if i % 2 == 0:
 79:         print('even branch')
 81: def func_21():
 82:     print('line 21')
 84: def func_22():
 85:     print('line 22')
 87: def func_23():
 88:     print('line 23')
 90: def func_24():
 91:     print('line 24')
 92:     for j in range(3):
 93:         print(j)
 95: def func_25():
 96:     print('line 25')
 97:     if i % 2 == 0:
 98:         print('even branch')
100: def func_26():
101:     print('line 26')
103: def func_27():
104:     print('line 27')
106: def func_28():
107:     print('line 28')
108:     for j in range(3):
109:         print(j)
111: def func_29():
112:     print('line 29')
114: def func_30():
115:     print('line 30')
116:     if i % 2 == 0:
117:         print('even branch')
119: def func_31():
120:     print('line 31')
122: def func_32():
123:     print('line 32')
124:     for j in range(3):
125:         print(j)
127: def func_33():
128:     print('line 33')
130: def func_34():
131:     print('line 34')
133: def func_35():
134:     print('line 35')
135:     if i % 2 == 0:
136:         print('even branch')
138: def func_36():
139:     print('line 36')
140:     for j in range(3):
141:         print(j)
143: def func_37():
144:     print('line 37')
146: def func_38():
147:     print('line 38')
149: def func_39():
150:     print('line 39')
152: def func_40():
153:     print('line 40')
154:     for j in range(3):
155:         print(j)
156:     if i % 2 == 0:
157:         print('even branch')
159: def func_41():
160:     print('line 41')
162: def func_42():
163:     print('line 42')
165: def func_43():
166:     print('line 43')
168: def func_44():
169:     print('line 44')
170:     for j in range(3):
171:         print(j)
173: def func_45():
174:     print('line 45')
175:     if i % 2 == 0:
176:         print('even branch')
178: def func_46():
179:     print('line 46')
181: def func_47():
182:     print('line 47')
184: def func_48():
185:     print('line 48')
186:     for j in range(3):
187:         print(j)
189: def func_49():
190:     print('line 49')
192: def func_50():
193:     print('line 50')
194:     if i % 2 == 0:
195:         print('even branch')
197: def func_51():
198:     print('line 51')
200: def func_52():
201:     print('line 52')
202:     for j in range(3):
203:         print(j)
205: def func_53():
206:     print('line 53')
208: def func_54():
209:     print('line 54')
211: def func_55():
212:     print('line 55')
213:     if i % 2 == 0:
214:         print('even branch')
216: def func_56():
217:     print('line 56')
218:     for j in range(3):
219:         print(j)
221: def func_57():
222:     print('line 57')
224: def func_58():
225:     print('line 58')
227: def func_59():
228:     print('line 59')
230: def func_60():
231:     print('line 60')
232:     for j in range(3):
233:         print(j)
234:     if i % 2 == 0:
235:         print('even branch')
237: def func_61():
238:     print('line 61')
240: def func_62():
241:     print('line 62')
243: def func_63():
244:     print('line 63')
246: def func_64():
247:     print('line 64')
248:     for j in range(3):
249:         print(j)
251: def func_65():
252:     print('line 65')
253:     if i % 2 == 0:
254:         print('even branch')
256: def func_66():
257:     print('line 66')
259: def func_67():
260:     print('line 67')
262: def func_68():
263:     print('line 68')
264:     for j in range(3):
265:         print(j)
267: def func_69():
268:     print('line 69')
270: def func_70():
271:     print('line 70')
272:     if i % 2 == 0:
273:         print('even branch')
275: def func_71():
276:     print('line 71')
278: def func_72():
279:     print('line 72')
280:     for j in range(3):
281:         print(j)
283: def func_73():
284:     print('line 73')
286: def func_74():
287:     print('line 74')
289: def func_75():
290:     print('line 75')
291:     if i % 2 == 0:
292:         print('even branch')
294: def func_76():
295:     print('line 76')
296:     for j in range(3):
297:         print(j)
299: def func_77():
300:     print('line 77')
302: def func_78():
303:     print('line 78')
305: def func_79():
306:     print('line 79')
308: def func_80():
309:     print('line 80')
310:     for j in range(3):
311:         print(j)
312:     if i % 2 == 0:
313:         print('even branch')
315: def func_81():
316:     print('line 81')
318: def func_82():
319:     print('line 82')
321: def func_83():
322:     print('line 83')
324: def func_84():
325:     print('line 84')
326:     for j in range(3):
327:         print(j)
329: def func_85():
330:     print('line 85')
331:     if i % 2 == 0:
332:         print('even branch')
334: def func_86():
335:     print('line 86')
337: def func_87():
338:     print('line 87')
340: def func_88():
341:     print('line 88')
342:     for j in range(3):
343:         print(j)
345: def func_89():
346:     print('line 89')
348: def func_90():
349:     print('line 90')
350:     if i % 2 == 0:
351:         print('even branch')
353: def func_91():
354:     print('line 91')
356: def func_92():
357:     print('line 92')
358:     for j in range(3):
359:         print(j)
361: def func_93():
362:     print('line 93')
364: def func_94():
365:     print('line 94')
367: def func_95():
368:     print('line 95')
369:     if i % 2 == 0:
370:         print('even branch')
372: def func_96():
373:     print('line 96')
374:     for j in range(3):
375:         print(j)
377: def func_97():
378:     print('line 97')
380: def func_98():
381:     print('line 98')
383: def func_99():
384:     print('line 99')
386: def func_100():
387:     print('line 100')
388:     for j in range(3):
389:         print(j)
390:     if i % 2 == 0:
391:         print('even branch')
393: def func_101():
394:     print('line 101')
396: def func_102():
397:     print('line 102')
399: def func_103():
400:     print('line 103')
402: def func_104():
403:     print('line 104')
404:     for j in range(3):
405:         print(j)
407: def func_105():
408:     print('line 105')
409:     if i % 2 == 0:
410:         print('even branch')
412: def func_106():
413:     print('line 106')
415: def func_107():
416:     print('line 107')
418: def func_108():
419:     print('line 108')
420:     for j in range(3):
421:         print(j)
423: def func_109():
424:     print('line 109')
426: def func_110():
427:     print('line 110')
428:     if i % 2 == 0:
429:         print('even branch')
431: def func_111():
432:     print('line 111')
434: def func_112():
435:     print('line 112')
436:     for j in range(3):
437:         print(j)
439: def func_113():
440:     print('line 113')
442: def func_114():
443:     print('line 114')
445: def func_115():
446:     print('line 115')
447:     if i % 2 == 0:
448:         print('even branch')
450: def func_116():
451:     print('line 116')
452:     for j in range(3):
453:         print(j)
455: def func_117():
456:     print('line 117')
458: def func_118():
459:     print('line 118')
461: def func_119():
462:     print('line 119')
464: def func_120():
465:     print('line 120')
466:     for j in range(3):
467:         print(j)
468:     if i % 2 == 0:
469:         print('even branch')
471: def func_121():
472:     print('line 121')
474: def func_122():
475:     print('line 122')
477: def func_123():
478:     print('line 123')
480: def func_124():
481:     print('line 124')
482:     for j in range(3):
483:         print(j)
485: def func_125():
486:     print('line 125')
487:     if i % 2 == 0:
488:         print('even branch')
490: def func_126():
491:     print('line 126')
493: def func_127():
494:     print('line 127')
496: def func_128():
497:     print('line 128')
498:     for j in range(3):
499:         print(j)
501: def func_129():
502:     print('line 129')
504: def func_130():
505:     print('line 130')
506:     if i % 2 == 0:
507:         print('even branch')
509: def func_131():
510:     print('line 131')
512: def func_132():
513:     print('line 132')
514:     for j in range(3):
515:         print(j)
517: def func_133():
518:     print('line 133')
520: def func_134():
521:     print('line 134')
523: def func_135():
524:     print('line 135')
525:     if i % 2 == 0:
526:         print('even branch')
528: def func_136():
529:     print('line 136')
530:     for j in range(3):
531:         print(j)
533: def func_137():
534:     print('line 137')
536: def func_138():
537:     print('line 138')
539: def func_139():
540:     print('line 139')
542: def func_140():
543:     print('line 140')
544:     for j in range(3):
545:         print(j)
546:     if i % 2 == 0:
547:         print('even branch')
549: def func_141():
550:     print('line 141')
552: def func_142():
553:     print('line 142')
555: def func_143():
556:     print('line 143')
558: def func_144():
559:     print('line 144')
560:     for j in range(3):
561:         print(j)
563: def func_145():
564:     print('line 145')
565:     if i % 2 == 0:
566:         print('even branch')
568: def func_146():
569:     print('line 146')
571: def func_147():
572:     print('line 147')
574: def func_148():
575:     print('line 148')
576:     for j in range(3):
577:         print(j)
579: def func_149():
580:     print('line 149')
582: def func_150():
583:     print('line 150')
584:     if i % 2 == 0:
585:         print('even branch')
587: def func_151():
588:     print('line 151')
590: def func_152():
591:     print('line 152')
592:     for j in range(3):
593:         print(j)
595: def func_153():
596:     print('line 153')
598: def func_154():
599:     print('line 154')
601: def func_155():
602:     print('line 155')
603:     if i % 2 == 0:
604:         print('even branch')
606: def func_156():
607:     print('line 156')
608:     for j in range(3):
609:         print(j)
611: def func_157():
612:     print('line 157')
614: def func_158():
615:     print('line 158')
617: def func_159():
618:     print('line 159')
620: def func_160():
621:     print('line 160')
622:     for j in range(3):
623:         print(j)
624:     if i % 2 == 0:
625:         print('even branch')
627: def func_161():
628:     print('line 161')
630: def func_162():
631:     print('line 162')
633: def func_163():
634:     print('line 163')
636: def func_164():
637:     print('line 164')
638:     for j in range(3):
639:         print(j)
641: def func_165():
642:     print('line 165')
643:     if i % 2 == 0:
644:         print('even branch')
646: def func_166():
647:     print('line 166')
649: def func_167():
650:     print('line 167')
652: def func_168():
653:     print('line 168')
654:     for j in range(3):
655:         print(j)
657: def func_169():
658:     print('line 169')
660: def func_170():
661:     print('line 170')
662:     if i % 2 == 0:
663:         print('even branch')
665: def func_171():
666:     print('line 171')
668: def func_172():
669:     print('line 172')
670:     for j in range(3):
671:         print(j)
673: def func_173():
674:     print('line 173')
676: def func_174():
677:     print('line 174')
679: def func_175():
680:     print('line 175')
681:     if i % 2 == 0:
682:         print('even branch')
684: def func_176():
685:     print('line 176')
686:     for j in range(3):
687:         print(j)
689: def func_177():
690:     print('line 177')
692: def func_178():
693:     print('line 178')
695: def func_179():
696:     print('line 179')
698: def func_180():
699:     print('line 180')
700:     for j in range(3):
701:         print(j)
702:     if i % 2 == 0:
703:         print('even branch')
705: def func_181():
706:     print('line 181')
708: def func_182():
709:     print('line 182')
711: def func_183():
712:     print('line 183')
714: def func_184():
715:     print('line 184')
716:     for j in range(3):
717:         print(j)
719: def func_185():
720:     print('line 185')
721:     if i % 2 == 0:
722:         print('even branch')
724: def func_186():
725:     print('line 186')
727: def func_187():
728:     print('line 187')
730: def func_188():
731:     print('line 188')
732:     for j in range(3):
733:         print(j)
735: def func_189():
736:     print('line 189')
738: def func_190():
739:     print('line 190')
740:     if i % 2 == 0:
741:         print('even branch')
743: def func_191():
744:     print('line 191')
746: def func_192():
747:     print('line 192')
748:     for j in range(3):
749:         print(j)
751: def func_193():
752:     print('line 193')
754: def func_194():
755:     print('line 194')
757: def func_195():
758:     print('line 195')
759:     if i % 2 == 0:
760:         print('even branch')
762: def func_196():
763:     print('line 196')
764:     for j in range(3):
765:         print(j)
767: def func_197():
768:     print('line 197')
770: def func_198():
771:     print('line 198')
773: def func_199():
774:     print('line 199')
776: def func_200():
777:     print('line 200')
778:     for j in range(3):
779:         print(j)
780:     if i % 2 == 0:
781:         print('even branch')
